<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Work.EditChapterActivity">

    <LinearLayout
        android:id="@+id/Loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:onClick="refresh"
        android:orientation="vertical"
        android:visibility="invisible">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loadinggif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/Remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TouchRefresh"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ActionBar"
            style="@style/actionbar"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:onClick="onBackPressed"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/partname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:paddingStart="90dp"
                android:paddingEnd="20dp"
                android:text="@string/editchapter"
                android:textSize="20sp" />


        </LinearLayout>

        <EditText
            android:id="@+id/title"
            style="null"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/edittitle"
            android:inputType="textPersonName"
            android:paddingStart="150dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/split10"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_weight="0"
            android:alpha="0.5"
            android:background="@drawable/gray" />

        <ScrollView
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="440dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/input"
                    android:inputType="textMultiLine"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="11sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.41"
            android:background="#ffffffff"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Try"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trylisten" />

            <Button
                android:id="@+id/Translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/translate" />

            <Button
                android:id="@+id/Store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="storeChapter"
                android:text="@string/Store" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>