<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:onClick="refresh"
        android:orientation="vertical"
        android:visibility="invisible">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loadinggif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/Remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TouchRefresh"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ActionBar"
            style="@style/actionbar"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:onClick="onBackPressed"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/partname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="87dp"
                android:paddingEnd="20dp"
                android:text="@string/modifybook"
                android:textSize="20sp" />


        </LinearLayout>

        <FrameLayout
            android:id="@+id/surface"
            android:layout_width="415dp"
            android:layout_height="186dp"
            android:background="@drawable/booksurface"
            android:onClick="getPicture">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/TitleLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:onClick="editTiltle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.2"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:hint="@string/maketitle"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="0.06"
                android:background="@drawable/arrow" />

        </LinearLayout>

        <ImageView
            android:id="@+id/split3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@drawable/gray" />

        <LinearLayout
            android:id="@+id/IntroLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:onClick="editIntro"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.2"
                android:text="@string/intro"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:hint="@string/makeintro"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="0.06"
                android:background="@drawable/arrow" />

        </LinearLayout>

        <ImageView
            android:id="@+id/split5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@drawable/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Publish"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:onClick="publishBook"
                android:text="@string/publish"
                android:textSize="17sp" />

            <Button
                android:id="@+id/Store"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="storeModify"
                android:text="@string/Store"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/booksurface"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:onClick="getPicture"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/addsurface" />
</android.support.constraint.ConstraintLayout>